--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>Lab 1 ITMD 362</title>
+	<h1>Nam Nguyen</h1>
   </head>
   <body>
-
+    <p>Lab 1</p>
+	<p>ITMD 362</p>
   </body>
 </html>
